fixed an issue with nested folders not showing

--- a/dashboard/static/dashboard/css/ssh.css
+++ b/dashboard/static/dashboard/css/ssh.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+
+body {
+    font-family: 'Fredoka';
+    background-color: #0d1017;
+    color: #fafafa;
+}
+
 .center {
     display: flex;
     align-items: center;
